# edu-yocto

./: .gitmodules  README.md
lab2/: CMakeLists.txt  f.csv  hellocmake.cpp  hellocmake.h  main.cpp  quicksort.h
lab3/: eduntp
lab4/: 123
lab4/meta-bpo/recipes-example/bpo-ntp/: bpontp_0.1.bb
lab4/meta-bpo/recipes-example/bpo-ntp/bpontp-0.1/: bpontp.c
